tests/paczka1/fuzzy1/86066544.err
Error in line 18: IhEdfrVo S731 58,2
Error in line 25: HY9S1Ku9Y A381 82,6
Error in line 36: IhEdfrVo S731 63,7
Error in line 38: IhEdfrVo A381 3,8
Error in line 37: S731 A381 88,3
